# mds_py_shakespeare

./: CHANGELOG.md  CONTRIBUTING.md  README.md  hamlet_script.xml  king-lear_script.xml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/py_shakespeare/: py_shakespeare.py
tests/: test_py_shakespeare.py
