[tool.poetry]
name = "py_shakespeare"
version = "0.1.0"
description = "Python package to obtain Shakespeare script and monologue"
authors = ["Hamidah Alatas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
nltk = "^3.6.5"
textstat = "^0.7.2"
bs4 = "^0.0.1"
simplejson = "^3.17.6"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
